# siriusViz

./: CMakeLists.txt  Makefile  README.md  graph.cpp  graph.v.glsl  heartData.txt  phase0.txt  phase2.txt
common/: CMakeLists.txt  shader_utils.cpp
data/: 0  1  10  2  3  4  5  6  7  8  9
utilities/: CMakeLists.txt  utilidades.cpp  utilidades.h
